crux-mir/test/symb_eval/sym_bytes/construct.good
test construct/3a1fbbbh::crux_test[0]: returned Symbolic BV, FAILED

failures:

---- construct/3a1fbbbh::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./lib/crucible/lib.rs:36:41: 36:58 !test/symb_eval/sym_bytes/construct.rs:13:5: 13:36: error: in construct/3a1fbbbh::crux_test[0]
[Crux]   MIR assertion at test/symb_eval/sym_bytes/construct.rs:13:5:
[Crux]   	sym2[0] == 0

[Crux] Overall status: Invalid.
